Created basic design

--- a/marks.html
+++ b/marks.html
@@ -50,6 +50,59 @@
 			<div class="col-xs-12 col-sm-12 marks">
 				<h1 style="text-align: center;">Marks</h1>
 				<hr />
+				<div class="table-responsive">
+					<table class="table-striped marks-table">
+						<thead>
+							<tr>
+								<th>Code</th>
+								<th>Subject</th>
+								<th>CT1</th>
+								<th>CT2</th>
+								<th>Model</th>
+								<th>Finals</th>
+								<th>Total</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<td>IT1001</td>
+								<td>Programming in JavaScript</td>
+								<td>8/10</td>
+								<td>-/10</td>
+								<td>-/20</td>
+								<td>-/50</td>
+								<td>-/10</td>
+							</tr>
+							<tr>
+								<td>IT1001</td>
+								<td>Programming in JavaScript</td>
+								<td>8/10</td>
+								<td>-/10</td>
+								<td>-/20</td>
+								<td>-/50</td>
+								<td>-/10</td>
+							</tr>
+							<tr>
+								<td>IT1001</td>
+								<td>Programming in JavaScript</td>
+								<td>8/10</td>
+								<td>-/10</td>
+								<td>-/20</td>
+								<td>-/50</td>
+								<td>-/10</td>
+							</tr>
+							<tr>
+								<td>IT1001</td>
+								<td>Programming in JavaScript</td>
+								<td>8/10</td>
+								<td>-/10</td>
+								<td>-/20</td>
+								<td>-/50</td>
+								<td>-/10</td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
 			</div>
 		</div>
 	</div>
