--- a/timetable.html
+++ b/timetable.html
@@ -47,9 +47,83 @@
 	
 	<div class="row" style="margin-top: 55px;">
 		<div class ="container">
-			<div class="col-xs-12 col-sm-12 time-table">
+			<div class="col-xs-12 col-sm-12 timetable">
 				<h1 style="text-align: center;">Your Timetable</h1>
 				<hr />
+				<div class="table-responsive">
+					<table class="table-striped timetable-table">
+						<thead>
+							<tr>
+								<th>Day Order</th>
+								<th>1</th>
+								<th>2</th>
+								<th>3</th>
+								<th>4</th>
+								<th>5</th>
+								<th>6</th>
+								<th>7</th>
+								<th>8</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<td>1</td>
+								<td>IT1001</td>
+								<td>IT1002</td>
+								<td>IT1003</td>
+								<td>IT1004</td>
+								<td>IT1005</td>
+								<td>IT1006</td>
+								<td>IT1007</td>
+								<td>IT1008</td>
+							</tr>
+							<tr>
+								<td>2</td>
+								<td>IT1001</td>
+								<td>IT1002</td>
+								<td>IT1003</td>
+								<td>IT1004</td>
+								<td>IT1005</td>
+								<td>IT1006</td>
+								<td>IT1007</td>
+								<td>IT1008</td>
+							</tr>
+							<tr>
+								<td>3</td>
+								<td>IT1001</td>
+								<td>IT1002</td>
+								<td>IT1003</td>
+								<td>IT1004</td>
+								<td>IT1005</td>
+								<td>IT1006</td>
+								<td>IT1007</td>
+								<td>IT1008</td>
+							</tr>
+							<tr>
+								<td>4</td>
+								<td>IT1001</td>
+								<td>IT1002</td>
+								<td>IT1003</td>
+								<td>IT1004</td>
+								<td>IT1005</td>
+								<td>IT1006</td>
+								<td>IT1007</td>
+								<td>IT1008</td>
+							</tr>
+							<tr>
+								<td>5</td>
+								<td>IT1001</td>
+								<td>IT1002</td>
+								<td>IT1003</td>
+								<td>IT1004</td>
+								<td>IT1005</td>
+								<td>IT1006</td>
+								<td>IT1007</td>
+								<td>IT1008</td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
 			</div>
 		</div>
 	</div>
