--- a/attendance.html
+++ b/attendance.html
@@ -14,6 +14,11 @@
 
 	<!-- Latest compiled JavaScript -->
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+
+	<!-- Angular JS -->
+	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular.min.js"></script>
+    
+    <script src="js/app.js"></script>
 	
 	<link rel="stylesheet" href="css/stylesheet.css" type="text/css">
 	
@@ -45,7 +50,7 @@
 		</div>
 	</nav>
 	
-	<div class="row" style="margin-top: 55px;">
+	<div class="row" style="margin-top: 55px;" ng-app="Subject" ng-controller="subCtrl">
 		<div class ="container">
 			<div class="col-xs-12 col-sm-12 attendance">
 				<h1 style="text-align: center;">Attendance</h1>
@@ -63,61 +68,13 @@
 							</tr>
 						</thead>
 						<tbody>
-							<tr>
-								<td>IT1001</td>
-								<td>Programming in JavaScript</td>
-								<td>2</td>
-								<td>18</td>
-								<td>20</td>
-								<td>90%</td>
-							</tr>
-							<tr>
-								<td>IT1001</td>
-								<td>Programming in JavaScript</td>
-								<td>2</td>
-								<td>18</td>
-								<td>20</td>
-								<td>90%</td>
-							</tr>
-							<tr>
-								<td>IT1001</td>
-								<td>Programming in JavaScript</td>
-								<td>2</td>
-								<td>18</td>
-								<td>20</td>
-								<td>90%</td>
-							</tr>
-							<tr>
-								<td>IT1001</td>
-								<td>Programming in JavaScript</td>
-								<td>2</td>
-								<td>18</td>
-								<td>20</td>
-								<td>90%</td>
-							</tr>
-							<tr>
-								<td>IT1001</td>
-								<td>Programming in JavaScript</td>
-								<td>2</td>
-								<td>18</td>
-								<td>20</td>
-								<td>90%</td>
-							</tr>
-							<tr>
-								<td>IT1001</td>
-								<td>Programming in JavaScript</td>
-								<td>2</td>
-								<td>18</td>
-								<td>20</td>
-								<td>90%</td>
-							</tr>
-							<tr>
-								<td>IT1001</td>
-								<td>Programming in JavaScript</td>
-								<td>2</td>
-								<td>18</td>
-								<td>20</td>
-								<td>90%</td>
+							<tr ng-repeat="sub in subjects">
+								<td>{{sub.code}}</td>
+								<td>{{sub.subName}}</td>
+								<td>{{sub.hrsMissed}}</td>
+								<td>{{sub.hrsAtt}}</td>
+								<td>{{sub.hrsTaken}}</td>
+								<td>{{sub.attPerc}}</td>
 							</tr>
 						</tbody>
 					</table>
