--- a/marks.html
+++ b/marks.html
@@ -15,6 +15,11 @@
 	<!-- Latest compiled JavaScript -->
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 	
+	<!-- Angular JS -->
+	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular.min.js"></script>
+    
+    <script src="js/app.js"></script>
+
 	<link rel="stylesheet" href="css/stylesheet.css" type="text/css">
 	
 	<title>Student Portal</title>	
@@ -50,55 +55,31 @@
 			<div class="col-xs-12 col-sm-12 marks">
 				<h1 style="text-align: center;">Marks</h1>
 				<hr />
-				<div class="table-responsive">
+				<div class="table-responsive" ng-app="Subject" ng-controller="subCtrl">
 					<table class="table-striped marks-table">
 						<thead>
 							<tr>
 								<th>Code</th>
 								<th>Subject</th>
-								<th>CT1</th>
-								<th>CT2</th>
-								<th>Model</th>
-								<th>Finals</th>
-								<th>Total</th>
+								<th>CT1(/10)</th>
+								<th>CT2(/10)</th>
+								<th>Model(/20)</th>
+								<th>Finals(/50)</th>
+								<th>ST(/5)</th>
+								<th>Attendance(/5)</th>
+								<th>Total(/10)</th>
 							</tr>
 						</thead>
 						<tbody>
-							<tr>
-								<td>IT1001</td>
-								<td>Programming in JavaScript</td>
-								<td>8/10</td>
-								<td>-/10</td>
-								<td>-/20</td>
-								<td>-/50</td>
-								<td>-/10</td>
-							</tr>
-							<tr>
-								<td>IT1001</td>
-								<td>Programming in JavaScript</td>
-								<td>8/10</td>
-								<td>-/10</td>
-								<td>-/20</td>
-								<td>-/50</td>
-								<td>-/10</td>
-							</tr>
-							<tr>
-								<td>IT1001</td>
-								<td>Programming in JavaScript</td>
-								<td>8/10</td>
-								<td>-/10</td>
-								<td>-/20</td>
-								<td>-/50</td>
-								<td>-/10</td>
-							</tr>
-							<tr>
-								<td>IT1001</td>
-								<td>Programming in JavaScript</td>
-								<td>8/10</td>
-								<td>-/10</td>
-								<td>-/20</td>
-								<td>-/50</td>
-								<td>-/10</td>
+							<tr ng-repeat="sub in subjects">
+								<td>{{sub.code}}</td>
+								<td>{{sub.subName}}</td>
+								<td>{{sub.mCT1}}</td>
+								<td>{{sub.mCT2}}</td>
+								<td>{{sub.mMODEL}}</td>
+								<td>{{sub.mFINAL}}</td>
+								<td>{{sub.mFINAL}}</td>
+								<td>{{sub.mTOTAL}}</td>
 							</tr>
 						</tbody>
 					</table>
